# rag-system

./: .env.example  .gitignore  DEPLOY.md  README.md  ask.py  docker-compose.yml  ingest.py  pyproject.toml  requirements.txt
cms/: __init__.py  auth.py  chunking.py  db.py  embedding.py  enrich.py  extract.py  main.py  mcp_server.py  parsers.py  pipeline.py  rag.py
cms/api/: __init__.py  casestudies.py  deps.py  documents.py  opportunities.py  serializers.py  system.py
cms/templates/: admin_tokens.html  admin_users.html  ask.html  base.html  casestudies.html  casestudy_detail.html  casestudy_form.html  casestudy_import.html  index.html  login.html  opportunities.html  opportunity_detail.html  opportunity_form.html  opportunity_import.html
db/: migration_auth.sql  migration_cms.sql  schema.sql
db/init/: 01-extensions.sql
docs/: TONG-QUAN-HE-THONG.md
scripts/: build_web.sh  download_model.py  reembed.py  run_cms.sh  run_mcp.sh  setup.sh
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/src/: index.css  main.tsx
web/src/components/: app-shell.tsx  page-header.tsx  query-states.tsx  status-pill.tsx  table-cell.tsx  theme-toggle.tsx  ui-primitives.tsx
web/src/lib/: api.ts  format.ts  use-query.ts
web/src/pages/: admin-tokens-page.tsx  ask-page.tsx  casestudy-detail-page.tsx  casestudy-form-page.tsx  casestudy-list-page.tsx  dashboard-page.tsx  import-page.tsx  login-page.tsx  opportunity-detail-page.tsx  opportunity-form-page.tsx  opportunity-list-page.tsx
