[project]
name = "rag-system"
version = "0.1.0"
description = "RAG demo — quản lý proposal/case study + hỏi-đáp AI (CMS + MCP)"
requires-python = ">=3.10"
dependencies = [
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "python-docx>=1.1",
    "pypdf>=4.0",
    "mcp>=1.0",
    "itsdangerous>=2.0",
]

[tool.setuptools]
packages = ["cms"]